--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@slicemachine/adapter-sveltekit": "^0.3.13",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/vite-plugin-svelte": "^2.4.5",
 		"concurrently": "^8.2.1",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
