--- a/.prettierrc
+++ b/.prettierrc
@@ -2,8 +2,10 @@
 	"useTabs": true,
 	"singleQuote": true,
 	"trailingComma": "none",
+	"semi": false,
 	"printWidth": 100,
 	"plugins": ["prettier-plugin-svelte"],
 	"pluginSearchDirs": ["."],
+	"htmlWhitespaceSensitivity": "ignore",
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
